--- a/_posts/thesis_chapters/2024-9-5-Design.md
+++ b/_posts/thesis_chapters/2024-9-5-Design.md
@@ -396,10 +396,18 @@ In terms of a representation in a activity system, we can express this as a deve
 ![tensions with tools](./Pictures/At_tension_1_v1.png){width=95%}
 
 
+**3d bee element summary or similar?**
 
-My adaptation took a short term approach, which guided a longer term intervention.
+This conflict partly drove one family to not continue and extended period of making in P1.
+Members of this family had engaged in planning on paper and in particularly in creating pixel art, however tensions began to emerge when the introduced code framework framework did not support the desired features of one child. The feature they wanted to add to the game was bee design roaming a 3D landscape.  
+
+In participant feedback, the  parent of one  family described in Appendix 5.x indicated that it took too long before in the planning stage and called for more hands on play and use of the tools of production before being called on to make creative decisions. The parent likened this to an arts studio approach.
+
+
 
 **short term adaptation**
+
+My resulting adaptations took a short term approach, which guided a longer term intervention.
 
 While the choice of text coding tools, brought additional challenge to the process building competency in tool use compared to using a block-coding approach.
 
@@ -415,26 +423,7 @@ Work needed to be done to address participant expectations of an acceptable scop
 
 The wider in a design challenge involved designing a bespoke  game authoring environment by adapting existing tools and embedding where possible affordances within that toolset to facilitate participants to address gaps in their knowledge without needing explicit instruction.
 
-This challenge was brought sharply into focus by a particular conflict experienced by one family in particular.
-
-#### The 3D flying bee - APPENDIX?
-
-One family in P1 chose not to continue with most other families after the Xmas break.
-
-Members of this family had engaged in planning on paper and in particularly in creating pixel art, however tensions began to emerge when the introduced code framework framework did not support the desired features of one child. The feature they wanted to add to the game was bee design roaming a 3D landscape.  
-
-in later stages they were reliant on others to implement code changes.
-
-When the family withdrew, they shared in feedback (see appendix 4.x) that at one point the family looked around and just saw people doing "hardcore coding" and no longer felt that they belonged". In the end stages of the game production process, due to the dynamic of the larger group, they were reliant on others to implement code changes for their imagined game, unable to contribute fully at this point and found themselves isolated. Thus a contributing factor to this families alienation were tensions engendered by the large group size and compounded by frustrations stemming from unfamiliarity with tools and processes. In participant feedback, the  parent of this family described in the previous section indicated that it took too long before in the planning stage and called for more hands on play and use of the tools of production before being called on to make creative decisions. The parent likened this to an arts studio approach. This feedback contributed to choices outlined in other sections of this chapter. (WHICH ONES)
-
-
-<!--
-When the family withdrew, in my journal notes I reflected that the they shared of alienation from the group process occurred in a session where, due to a sense of urgency to complete games, I had omitted drama-based warm up activities. Instead as participant entered I began to support to help some participants debug some pressing code errors. -->
-
-
- <!-- namely: an incomplete 2D platformer; pixel graphics; with graphical scaffolding for text-based code; and deliberately incomplete thus inviting improvement. -->
-
-
+<!-- This challenge was brought sharply into focus by a particular conflict experienced by one family in particular. -->
 <!-- As explored in the literature review, an extensive body of research on the design motivations and impact on learners exists for the creative coding tools Scratch.  -->
 
 <!-- A common question for this research is why not use Scratch (see LR / Glossary)? While Scratch, is aimed a broad range of media creation, much of this research involves game making as a popular genre of media of young people. I chose to not use Scratch for this study, partly as it was well researched and partly to prioritise authenticity of tool set.   -->
@@ -448,9 +437,9 @@ When the family withdrew, in my journal notes I reflected that the they shared o
 <!-- NOTE - PERHAPS EXPLORE COMPLEXITIY OF IDES AS A BARRIER IN RESEARCH - SEE BLUE JAY AND GREEN FOOT TRAINING IDEs -->
 <!-- In the activities of study, a high degree of authenticity made possible, in a material sense, by the digital nature of the learning resources. Beyond a general purpose computer, no prohibitive equipment is needed. -->
 
-## Detail of primary tool evolution based on resolving Conflicts
+**Detail of primary tool evolution based on resolving Conflicts**
 
-This section describes key transformations in use of primary tools. In this study I use the term primary tools to be those used to directly achieve the task and other tool use in the form of help resources, documentation and other support processes as secondary tools. Specifically this section covers the transformation in constitution and use of code and asset authoring tools and a starting game code template.  
+The following section describes key transformations in use of primary tools. In this study I use the term primary tools to be those used to directly achieve the task and other tool use in the form of help resources, documentation and other support processes as secondary tools. Specifically this section covers the transformation in constitution and use of code and asset authoring tools and a starting game code template.  
 
 ### Using a starter game template within a code playground
 
@@ -553,6 +542,7 @@ A later discussion section in this chapter illustrates a more complex interactio
 <!-- Make point that it is hard to separate out tools and communities. In case of Mozilla, code playgrounds, and teach the web, and the culture of developers and teaching communities they are interlinked. Discuss and compare to Kafai in book, the lineage of Logo, Scratch. Instead the more authentic approach of a real language.
 -->
 
+### Creating key affordances
 
 
 #### Variable editing for player movement
@@ -1983,3 +1973,24 @@ While block coding offers significant advantages (GL)in preventing syntax errors
 In the video data analysed, there were practically no extended blockages to undertaking work related to the use of this environment. While this study does not attempt to quantify this factor, the experience compares very favourably to my experiences of using and teaching coding environments.  In my design the tools set is distinct from tools like Scratch, Logo in that while those tools were designed to be self-contained, the use of a JS library in a web coding environment is more open-ended.
 
 In my design, tools are more authentic and familiar in terms of using a professional framework and a web technology around which the internet browser is based on.
+
+
+
+#### The 3D flying bee - APPENDIX?
+
+One family in P1 chose not to continue with most other families after the Xmas break.
+
+Members of this family had engaged in planning on paper and in particularly in creating pixel art, however tensions began to emerge when the introduced code framework framework did not support the desired features of one child. The feature they wanted to add to the game was bee design roaming a 3D landscape.  
+
+When the family withdrew, they shared in feedback (see appendix 4.x) that at one point the family looked around and just saw people doing "hardcore coding" and no longer felt that they belonged".
+
+In the end stages of the game production process, due to the dynamic of the larger group, they had been reliant on others to implement code changes for their imagined game, unable to contribute fully at this point and found themselves isolated.
+
+Thus a contributing factor to this families alienation were tensions engendered by the large group size and compounded by frustrations stemming from unfamiliarity with tools and processes.
+
+In participant feedback, the  parent of this family described in the previous section indicated that it took too long before in the planning stage and called for more hands on play and use of the tools of production before being called on to make creative decisions. The parent likened this to an arts studio approach. This feedback contributed to choices outlined in other sections of this chapter. (WHICH ONES)
+
+When the family withdrew, in my journal notes I reflected that the they shared of alienation from the group process occurred in a session where, due to a sense of urgency to complete games, I had omitted drama-based warm up activities. Instead as participant entered I began to support to help some participants debug some pressing code errors.
+
+
+<!-- namely: an incomplete 2D platformer; pixel graphics; with graphical scaffolding for text-based code; and deliberately incomplete thus inviting improvement. -->
