--- a/_posts/thesis_chapters/2024-9-5-Design.md
+++ b/_posts/thesis_chapters/2024-9-5-Design.md
@@ -596,27 +596,29 @@ The evolution of the starting template aligned with UMC approaches; construction
 
 #### Use of game assets
 
-There has been extensive research supporting the motivational value of the ability for young people to bring their interests into multimedia creations via choice of assets and narratives [@kajamaa_digital_2018; @resnick2014give; @peppler_supergoo_2007]. In line with these findings, I observed a palpable a sense of achievement when participants succeeded in seeing and hearing their creations in their game after making the final changes in code. For some, the sense of a achievement appeared magnified by difficulty caused by the unfamiliar environment and processes.
-EVIDENCE?
+There has been extensive research supporting the motivational value of the ability for young people to bring their interests into multimedia creations via choice of assets and narratives [@kajamaa_digital_2018; @resnick2014give; @peppler_supergoo_2007]. My observations supported these findings. Indeed, I observed a strong palpable a sense of achievement and satisfaction when participants succeeded in seeing and hearing their creations in their game after making the final changes in code. For some, this sense of a achievement appeared magnified by difficulty caused by the unfamiliar environment and processes. As if they almost couldn't believe they had made an impact on the game world via interaction with such an alien language.
 
-This aligns with educational research of the value of incorporating Funds of Knowledge into technical learning environments [Cole etc].
+I now outline and discuss the evolution of the use of simple block graphics, the use of pixel art  authoring tool, and wider asset creation approaches.
 
-While the value of this process seems clear from existing research, it presented challenges and design tensions in this learning design.
+<!-- EVIDENCE? - code for this? -->
 
-This section conversation: simple block graphics as a half-baked affordences, the use of pixel art and authoring tool, distributed asset creation approaches  
+<!-- This aligns with educational research of the value of incorporating Funds of Knowledge into technical learning environments [Cole etc]. -->
+
+<!-- While the value of this process seems clear from existing research, it presented challenges and design tensions in this learning design. -->
+
+
 
 ##### Simple block graphics
 
-A further way in which the template aligned with the concept of half-baked game concept as in how the use of minimal starting game assets invited creative addition by participants in the form of graphical asset creation and game story.
 
-In P1 a template based on tutorial used stock graphics of a astronaut collecting stars on platforms resembling earth and grass. In P2 starting graphics consisted of colour blocks. Their size of 32 x 32 corresponded to the default project size of Piskel (the graphical pixel art editor) with an aim to was also design to reduce technical friction.
+In P1 a template based on tutorial used stock graphics of a astronaut collecting stars on platforms resembling earth and grass. In P2 starting graphics consisted of colour blocks. Their size of 32 x 32 corresponded to the default project size of Piskel (the graphical pixel art editor) with an aim to was also design to reduce technical friction. One of the complications encountered in P1 was the differing sizes of sprites created using different graphical tools. I helped resolve this for participants by matching the size of the block in the grid level design structure described above to the default size of sprites created in Piskel (32 x 32 pixels). This is one example of one of the  technical alignments which addressed and helped resolve practical obstacles that participants experienced.
 
-A pixel art approach to graphics allowed a balance between the potential for positive engagement with game making and the potential drain of time to this one activity, thus helping resolve one of the tensions emerging in P1. Piskel had proved to be intuitive for many younger participants with three main areas: a set of editing tools; a canvas for creation; and a set of tools to export, save and import work (see Figure 4.x).
+The pixel art tool used, Piskel, proved to be intuitive for many younger participants with three main areas: a set of editing tools; a canvas for creation; and a set of tools to export, save and import work (see Figure 4.x).
 
 ![](./Pictures/piskel_app_1.png){width=95%}
 Figure 4.x - Interface of Piskelapp tool
 
-One of the complications encountered in P1 was the differing sizes of sprites created using different graphical tools. I helped resolve this for participants by matching the size of the block in the grid level design structure described above to the default size of sprites created in Piskel (32 x 32 pixels). This is one example of one of the  technical alignments which addressed and helped resolve practical obstacles that participants experienced.
+The template's use of minimal starting game assets invited creative addition by participants, again aligned to the half-baked approach. At the same time however, the overall simplification reduced and therefore rebalanced time spent on to this activity compared to other game coding processes, thus helping resolve one of the tensions emerging in P1.
 
 #### Distributed approach to asset creation
 
