--- a/_posts/thesis_chapters/tocs/2024-9-5-Design.md_toc.md
+++ b/_posts/thesis_chapters/tocs/2024-9-5-Design.md_toc.md
@@ -7,12 +7,9 @@
         framework](#analysis-of-dimensions-of-game-making-activity-using-3gat-framework)
         -   [Environmental factors and
             objectives](#environmental-factors-and-objectives)
-        -   [Activity system 1 - a novice game making community making
-            games as a learning
-            experience](#activity-system-1---a-novice-game-making-community-making-games-as-a-learning-experience)
-            -   [Illustrative vignette on participants activity
-                indicating general activity of
-                participants](#illustrative-vignette-on-participants-activity-indicating-general-activity-of-participants)
+        -   [Activity system 1 - an emerging community of novice game
+            makers community making games as a learning
+            experience](#activity-system-1---an-emerging-community-of-novice-game-makers-community-making-games-as-a-learning-experience)
         -   [Activity system 2 - Constructing a game feature by
             feature](#activity-system-2---constructing-a-game-feature-by-feature)
             -   [Illustrative use of tools to mediate activity shown in
@@ -21,20 +18,20 @@
             -   [Operations and actions within the system - Implementing
                 discrete code and design
                 structures](#operations-and-actions-within-the-system---implementing-discrete-code-and-design-structures)
-            -   [Applying activity theory to surface contradictions and
-                design tensions experienced by participants and
-                facilitator/s](#applying-activity-theory-to-surface-contradictions-and-design-tensions-experienced-by-participants-and-facilitators)
+            -   [LINK - Applying activity theory to surface
+                contradictions and design tensions experienced by
+                participants and
+                facilitator/s](#link---applying-activity-theory-to-surface-contradictions-and-design-tensions-experienced-by-participants-and-facilitators)
     -   [Narrative exploration of
         contradictions](#narrative-exploration-of-contradictions)
     -   [C1 - contradictions involving the use of game programming and
         asset authoring
         tools](#c1---contradictions-involving-the-use-of-game-programming-and-asset-authoring-tools)
-        -   [The 3D flying bee](#the-3d-flying-bee)
-    -   [Detail of Tool Evloutio based on resolving
-        Conflicts](#detail-of-tool-evloutio-based-on-resolving-conflicts)
-        -   [Use of a Code Playground](#use-of-a-code-playground)
-        -   [Using a starter game
-            template](#using-a-starter-game-template)
+        -   [Using a starter game template within a code
+            playground](#using-a-starter-game-template-within-a-code-playground)
+            -   [Code playground.](#code-playground.)
+            -   [Starting template](#starting-template)
+        -   [Creating key affordances](#creating-key-affordances)
             -   [Variable editing for player
                 movement](#variable-editing-for-player-movement)
             -   [Level design and
@@ -111,3 +108,7 @@
             activity](#emergence-of-gdps-as-a-germ-cell-of-activity)
         -   [Link to next chapter](#link-to-next-chapter)
     -   [Removed notes from chapter](#removed-notes-from-chapter)
+    -   [Removed NOTES](#removed-notes)
+        -   [Use of a Code Playground](#use-of-a-code-playground)
+            -   [The 3D flying bee -
+                APPENDIX?](#the-3d-flying-bee---appendix)
